--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravellegends/pt-br-validator": "^12.0",
         "league/flysystem-aws-s3-v3": "^3.0",
         "league/flysystem-read-only": "^3.0",
+        "livewire/flux": "^2.6",
         "livewire/livewire": "^3.5",
         "opcodesio/log-viewer": "^3.14",
         "owen-it/laravel-auditing": "^14.0",
