--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
-APP_NAME=Agendamento
+APP_NAME=PlaylistOrganizer
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
-APP_URL=localhost
-APP_BASE_DOMAIN=localhost
+APP_TIMEZONE=America/Sao_Paulo
+APP_URL=spotify.localhost
+
 DEBUGBAR_ENABLED=true
 
 APP_LOCALE=pt_BR
-APP_FALLBACK_LOCALE=en
+APP_FALLBACK_LOCALE=pt_BR
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
@@ -26,7 +26,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=agendamento
+DB_DATABASE=spotify
 DB_USERNAME=root
 DB_PASSWORD=root
 
@@ -37,7 +37,7 @@ SESSION_PATH=/
 SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
+FILESYSTEM_DISK=s3
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
@@ -59,14 +59,16 @@ MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
+AWS_ACCESS_KEY_ID=minioadmin
+AWS_SECRET_ACCESS_KEY=minioadmin
 AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
+AWS_BUCKET=spotify
+AWS_USE_PATH_STYLE_ENDPOINT=true
+AWS_ENDPOINT=http://localhost:9000
 
 VITE_APP_NAME="${APP_NAME}"
 
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-GOOGLE_REDIRECT_URI=http://127.0.0.1:8000/auth/google/callback
+SPOTIFY_API_URL=https://api.spotify.com/v1
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+SPOTIFY_REDIRECT_URI=http://127.0.0.1:8000/oauth2/spotify/callback
